--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: VIBASS 2022
+title: "University of São Paulo"
 description: Material for the short course on Spatial and spatio-temporal models in R-INLA
