Course Sao Paulo change description and fixed typos

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: "University of São Paulo"
+title: "University of São Paulo, 27-30 September 2022"
 description: Material for the short course on Spatial and spatio-temporal models in R-INLA
