Course Sao Paulo change description and fixed typos

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 title: "Spatial and spatio-temporal models in R-INLA" 
 description: Material for the short course at the University of São Paulo, 
-27-30 September 2022" 
+26-30 September 2022 
