Update to ICL module

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 title: "Spatial and spatio-temporal models in R-INLA" 
-description: "Material for the short course at the University of São Paulo, 
-26-30 September 2022" 
+description: "Material for the MSc in Epidemiology module at Imperial College London, 
+January-March 2023" 
