Change the config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
-title: "Bayesian modelling for Spatial and Spatio-Temporal data" 
-description: "Material for the MSc in Epidemiology module at Imperial College London, 
-January-March 2023" 
+title: "Geospatial Analytics using R and R-INLA" 
+description: "Instructions, Timetable and Material for the short course at AIMS-Rwanda, 
+27 November - 1 December 2023" 
