update some sessions

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
-title: "Geospatial Analytics using R and R-INLA" 
-description: "Instructions, Timetable and Material for the short course at AIMS-Rwanda, 
-27 November - 1 December 2023" 
+title: "Bayesian Reasoning and Methods for spatio-temporal data" 
+description: "Instructions, Timetable and Material for the module, 
+January - March 2024" 
