Changes to the name of the module

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
-title: "Bayesian Reasoning and Methods for spatio-temporal data" 
+title: "Bayesian Reasoning and Methods for spatio-temporal data (MSc Epi)" or Advanced Analytics (MSc HDA)" 
 description: "Instructions, Timetable and Material for the module, 
 January - March 2024" 
